--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -192,7 +192,7 @@ image::command_clear_after.png[clear aft, 800]
 The figures above shows the before and after state of clearing the entries of the application.
 
 [[command-exit]]
-==== Exiting the program : `exit`
+==== Exiting the application : `exit`
 
 Exits the application. +
 
