--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -460,12 +460,10 @@ Example(s):
 View the list of volunteers assigned to event at index 1.
 
 .Panel of events
-image::command_switch_after.png[view events, 300]
+image::command_record_manage_eventIndex.png[view events, 300]
 
-The figure above shows the 'event' panel that you will see before executing the `manage` command.
-
-[NOTE]
-The number displayed next to the event name is the EVENT_INDEX that you have to enter.
+The figure above shows the 'event' panel that you will see before executing the `manage` command. The circled
+numbers is the EVENT_INDEX that you have to enter.
 
 .Managing the selected event
 image::command_manage_view.png[manage, 800]
