--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -462,8 +462,8 @@ View the list of volunteers assigned to event at index 1.
 .Panel of events
 image::command_record_manage_eventIndex.png[view events, 300]
 
-The figure above shows the 'event' panel that you will see before executing the `manage` command. The circled
-numbers is the EVENT_INDEX that you have to enter.
+The figure above shows the 'event' panel that you will see before executing the `manage` command.
+The circled numbers indicate the EVENT_INDEX that you have to enter.
 
 .Managing the selected event
 image::command_manage_view.png[manage, 800]
