--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -414,10 +414,10 @@ The figures below show the before and after results of an edit command.
 
 --
 .Before entering the edit command
-image::command_edit_event_before.png[Before add, 800]
+image::command_event_edit_before.png[Before edit, 300]
 
 .The targeted event is updated to reflect the new values after entering the edit command
-image::command_edit_event_after.png[After add, 800]
+image::command_event_edit_after.png[After edit, 300]
 --
 
 [[command-event-delete]]
@@ -436,10 +436,10 @@ The figures below show the before and after results of a delete command.
 
 --
 .The event at index 2 is targeted before entering the delete command
-image::command_delete_event_before.png[Before add, 800]
+image::command_event_delete_before.png[Before delete, 300]
 
 .The targeted event is deleted after entering the delete command
-image::command_delete_event_after.png[After add, 800]
+image::command_event_delete_after.png[After delete, 300]
 --
 
 === Record Management
