--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -329,11 +329,12 @@ This section lists features related to managing the calendar in Hallper.
 ==== Creating calendar : `create_calendar`
 
 Creates a calendar file in Hallper for updating of events. +
-Format: `create_calendar month/MONTH year/YEAR`
+Format: `create_calendar month/MMM year/YYYY`
 
 ****
-* Creates a calendar as a *`.ics`* file.
+* Creates a monthly calendar as a *`.ics`* file.
 * The MONTH *must be specified as MMM*.
+* MONTH *is not case-sensitive*.
 * The YEAR *must be specified as YYYY*.
 ****
 Example:
@@ -344,13 +345,15 @@ saves it as a *`.ics`* file.
 
 ==== Viewing calendar : `view_calendar`
 
-Views the calendar of the specified month. +
-Format: `view_calendar MONTH`
+Loads the specified monthly calendar `.ics` file into the UI. UI by default displays the current week. +
+Format: `view_calendar month/MMM year/YYYY`
 
 Example:
 
-* `view_calendar Feb` +
-Displays view of calendar for the month of `Feb`.
+* `view_calendar month/Oct year/2018` +
+Displays view of calendar with current week as default page with the events loaded from `OCT-2018.ics`.
+
+image::calendar_view_diagram.png[width="790"]
 
 ==== Adding event into calendar : `add_event`
 
