--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -415,9 +415,9 @@ The voter list must also be manually updated every time the person details are u
 ==== Current implementation
 This section explains the implementation of the features associated with the Schedule class of each Schedule while detailing some implementation details of the Schedule class. The relevant commands which are callable by the user to be discussed are:
 
-EditCommmand - The base Edit commmand for person with two additions - Schedule and Schedule Update parameter
+`EditUserCommand` - The base Edit command for person with two additions - Schedule and Schedule Update parameter
 
-MaxScheduleCommand - Compare two persons' schedules and return the common free time.
+`MaxScheduleCommand` - Compare two persons' schedules and return the common free time.
 
 ==== Design considerations
 
@@ -448,7 +448,7 @@ This section explains the implementation of the features associated with the Tim
 
 ==== Design considerations
 
-EditCommmand - The base Edit commmand for person with one addition - Timetable parameter
+`EditUserCommand` - The base Edit command for person with one addition - Timetable parameter
 
 TimeTable is data downloaded from nusmods.com, detailing the students' weekly schedule for the semester. This is to allow ease of access for the students, without having them to enter their schedules manually using schedule/ schedule update parameters in the EditCommand. This timetable is also not stored as it is inside the xml but immediately translated into a schedule object to be passed back to the application.
 
@@ -477,9 +477,10 @@ Step 4. The filtered lessons is then converted into an arraylist of Slot before 
 === Add Friend feature
 
 ==== Current implementation
-This section explains the implementation of the adding of friends feature associated with each user in the event organizer. The relevant commands which are callable by the user to be discussed are:
+This section explains the implementation of the addition/deletion of friends feature associated with each user in the event organizer. The relevant commands which are callable by the user to be discussed are:
 
 * `AddFriendCommand` - takes in a pair of indexes and makes a pair of persons associated with the indexes to be friends with each other
+* `DeleteFriendCommand` - takes in a pair of indexes and makes a pair of persons associated with the indexes no longer friends with each other
 
 The following sequence diagram for AddFriendCommand is illustrated below:
 
@@ -495,23 +496,30 @@ To specify the friendship relation between two users, both the indexes of the us
 
 ===== Aspect: Friend class
 
-Like other attributes, we represents a friend of a Person using a Friend class. The Friend class has a string that combines the 4 main attributes of Person (name, phone, email, address), since these attributes act as the primary key for a Person. In the Person class, his/her friends will be represented using a Set of Friend objects as the friend list. Each time addFriend command is called, a Friend object will be created and added into the set.
+Like other attributes, we represents a friend of a Person using a Friend class. The Friend class has a string field that combines the 4 main attributes of Person (name, phone, email, address), since these attributes act as the primary identification for a Person. Example:
+For a person with name Alex Yeoh, phone 87438807, email alexyeoh@example.com, address Blk 30 Geylang Street 29, #06-40, the Friend object will have a string field that is 'Alex Yeoh-87438807-alexyeoh@example.com-Blk 30 Geylang Street 29, #06-40'.
 
-===== Aspect: Friendships can only be added once
+In the Person class, his/her friends will be represented using a Set of Friend objects as the friend list. Each time `AddFriendCommand` is called, a Friend object will be created and added into the set.
 
-Each person can only be added as a friend once by another person. Hence if two persons are already friends, calling the addFriend command for both these persons will trigger the warning that prevents each of their friend list from adding each other again.
+In the display panel where the friend list of a user is displayed, the friend of that user will be identified by the first token of the string field in the Friend object separated by the delimiter '-' (due to the toString() method in Friend class), which is the actual name of the friend.
 
-Also, once two persons are added as friends of each other, they remain as friends and the friendship cannot be deleted.
+===== Aspect: Friendships can only be added once and deleted if they are current friends
+
+Each person can only be added as a friend once by another person. If two persons are already friends and `AddFriendCommand` is called again on these two persons, each of their friend lists will be checked to confirm that each other is already on it, hence the same person will not be added twice.
+
+Similarly, if two persons are not yet friends, or were friends but the friendship was deleted, if `DeleteFriendCommand` is called on these two persons, each of their friend lists will be checked to confirm that each other is not on it, hence the delete action will not be taken.
 
 ===== Aspect: Deletion/Modification of attributes of a person who is currently on the friend list of another person
+
+The friend lists of each user have to be constantly updated when a person is deleted from the Event Organizer or his attributes are modified (such as name change).
 
 The following scenario describes what happens if person A is already on the friend list of person B (person A and B are friends with each other).
 
 Person A gets deleted from the Event Organizer:
-This triggers the function which searches through the friend lists of all the other persons. If someone has person A in their friend list (such as person B), it will further trigger the function which removes person A (Friend object) from the friend list.
+This triggers the updateFriendListsDueToDeletedPerson() function in the `DeleteUserCommand` class, which searches through the friend lists of all the other persons. If someone has person A in their friend list (such as person B), person A will be removed from his/her friend list.
 
 Person A's attributes gets modified (eg change name/phone):
-This triggers the function which searches through the friend lists of all the other persons. If someone has person A in their friend list (such as person B), it will further trigger the function that creates a new Friend object with the new attributes and replace the original object in B's friend list.
+This triggers the updateFriendListsDueToEditedPerson() function in the `EditUserCommand` class, which searches through the friend lists of all the other persons. If someone has person A in their friend list (such as person B), the original Friend object will be replaced by the new Friend object created using the new attributes of person A.
 
 // end:::addFriend[]
 
