--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -247,20 +247,24 @@ Format: `queue`
 
 ==== Registering Patient to Queue : `register`
 
-Registers a new patient that comes to the clinic. +
+Registers a new patient that comes to the clinic, the registered patient is placed inside the Patient Queue +
 Alias: `reg` +
 Format: `register <INDEX>` or `register <IC Number> [coming soon]`
 
 Example:
 
-* `register 3` +
-Register the patient into the 3rd index.
+* `list` +
+`register 3` +
+Registers the 3rd patient in the database.
+* `find david` +
+`register 1` +
+Registers the 1st patient in the results of the `find` command
 
 ==== Removing a patient from queue : `remove`
 
 Removes someone from the queue if he/she leaves before being served. +
 Alias: `rem` +
-Format: `remove <INDEX>` or `remove <IC Number> [coming soon]`
+Format: `remove <POSITION>` or `remove <IC Number> [coming soon]`
 
 Examples:
 
@@ -271,21 +275,22 @@ Remove patient with IC Number S9382839X from the queue.
 
 ==== Inserting a patient to queue : `insert`
 
-Inserts a patient at specified position in the queue. +
+Inserts a patient at a specified position in the queue. +
 Alias: `ins` +
 Format: `insert <INDEX> p/<POSITION>` or `insert <IC Number> p/<POSITION> [coming soon]`
 
 Examples:
 
-* `insert 4 p/5` +
-Insert the 4th person of the address book into the 5th index of the queue.
+* `list` +
+`insert 4 p/5` +
+Insert the 4th person of the database into the 5th position in the queue.
 * `insert S9123456A p/5` +
-Insert the patient with that IC number to the 5th index of the queue.
+Insert the patient with IC number S9123456A to the 5th position in the queue.
 
 
 ==== Serving the first patient in the queue : `serve`
 
-Serves the patient first in queue. +
+Serves the patient first in queue. This places the patient into the Current Patient. +
 Alias: `ser` +
 Format: `serve`
 
@@ -293,7 +298,7 @@ Format: `serve`
 
 Add documents to the Current Patient +
 Alias: `da` +
-Format: `docAdd [mc/<MC>] [n/<NOTE>] [r/<REFERRAL>]`
+Format: `docAdd [mc/<MC_DAYS>] [n/<NOTE>] [r/<REFERRAL>]`
 
 ****
 * At least one of the optional fields must be provided.
@@ -301,21 +306,28 @@ Format: `docAdd [mc/<MC>] [n/<NOTE>] [r/<REFERRAL>]`
 * You can remove any of the patient’s documents by typing prefix/ without specifying any document after it.
 ****
 
+[NOTE]
+====
+The note must be added to the patient to finish serving the patient.
+====
+
 Examples
 
-* `docAdd mc/3 days n/fever`
+* `docAdd mc/3 n/This patient complains of headache for past 3 days`
 * `docAdd r/Ng Teng Fong Hospital`
 
 ==== Dispensing Medicine to Current Patient : `dispenseMedicine`
 
 Add medicine to the Current Patient +
 Alias: `dm` +
-Format `dispenseMedicine <INDEX> amt/<AMOUNT`
+Format `dispenseMedicine <MEDICINE_INDEX> amt/<AMOUNT`
 
 Examples:
 
-*`dispenseMedicine 1 amt/10` +
-*`dispenseMedicine 5 amt/2`
+* `dispenseMedicine 1 amt/10` +
+10x of the 1st medicine in the displayed medicine list will be added to the patient. +
+* `dispenseMedicine 5 amt/2` +
+2x of the 5th medicine in the displayed medicine list will be added to the patient.
 
 ==== Finish serving the Current Patient : `finish`
 
@@ -370,14 +382,14 @@ Generates a referral letter for the patient of that IC number with the following
 
 Removes a patient from the served patient list when the patient completes payment. +
 Alias: `pay` +
-Format: `payment <INDEX>`
+Format: `payment <POSITION>`
 
 Examples:
 
 * `payment 3` +
-Removes the third patient from the list.
+Removes the 3rd patient from the served patient list.
 * `payment 1` +
-Removes the first patient from the list.
+Removes the 1st patient from the served patient list.
 
 === Miscellaneous
 
@@ -406,6 +418,7 @@ Format: `undo`
 [NOTE]
 ====
 Undoable commands: those commands that modify the address book's content (`add`, `delete`, `edit` and `deleteAll`).
+This includes all commands that changes the `Patient` or `Medicine` class, PQMS-related commands are not __undoable__.
 ====
 
 Examples:
@@ -423,6 +436,9 @@ The `undo` command fails as there are no undoable commands executed previously.
 `deleteAll` +
 `undo` (reverses the `deleteAll` command) +
 `undo` (reverses the `delete 1` command) +
+
+* `addMedicine mn/panadol msq/100 ppu/5 sn/00000001 s/2500` +
+`undo` (reverses the `addMedicine` command)
 
 ==== Redoing the previously undone command : `redo`
 
