--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -23,7 +23,7 @@ EventsPlus+ is for the busy university student who *prefer to use a desktop app 
 == Quick Start
 
 .  Ensure you have Java version `9` or later installed in your Computer.
-.  Download the latest `addressbook.jar` link:{repoURL}/releases[here].
+.  Download the latest `eventsPlus+.jar` link:{repoURL}/releases[here].
 .  Copy the file to the folder you want to use as the home folder for your Address Book.
 .  Double-click the file to start the app. The GUI should appear in a few seconds.
 +
